syntax = "proto3";

package pb;
option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message VerifyForgotPasswordRequest {
    int64 email_id = 1;
    int64 secret_code = 2;
}

message VerifyForgotPasswordResponse {
    bool is_used = 1;
}

